fix: books no longer overlap search bar, updated to icon

--- a/src/App.css
+++ b/src/App.css
@@ -123,18 +123,22 @@ button:active {
   padding: 80px 10px 20px;
 }
 
-.clear-search-button {
+.clear-search {
   display: block;
-  font-size: 1.1rem;
-  border-radius: 10px;
-  background-color: #3c48b8;
-  border: 1px solid #1c299c;
-  margin-right: 10px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  top: 20px;
+  left: 15px;
+  width: 50px;
+  height: 53px;
+  background-image: url('./icons/window-close-solid.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 28px;
+  font-size: 0;
+  border: none;
+  outline: none;
 }
 
-.clear-search-button:hover {
+.clear-search:hover {
   background-color: #1c299c;
   cursor: pointer;
   font-size: 1.1rem;
